# useful_jobs

./: .gitignore  nb_add_permissions.py  pyproject.toml  requirements.txt
backup_code/: cisco_nxos_show_snmp_user.textfsm  get_configs_job.py  test_textfsm_template.py
backup_job/: get_configs_job.py
controller_tests/: aaa_resp.json  aci_auth.py  creds.example.env  jmes_test.py  meraki_remediation_config_test.py  meraki_test.py  netscaler_test.py  output.json  resolve_jmespath.py  vmanage_auth.py  wlc_test.py  wti_test.py  xml_remediation_test.py
gc_useful_macros/: eos_acl_macro.j2  ios_acl_macros.j2  ios_mask_to_wild_macro.j2  nxos_acl_macro.j2  xr_acl_macro.j2
jobs/: get_configs_job.py  ping_job.py
orm/: create_git_repository.py  device_setup.py
utilities/: acl_output.yml  acl_to_yaml.py  add_job_to_logs.py  b64_encode_creds.py  creds.example.env  csv_to_c_context.py  get_graphql_output.py  grapgql_output.json  graphql_output.json  json_to_c_context.py  netmiko_connect.py  networks.json
utilities/sites/: 00F_Georgetown_SC.yml  01B_Shreveport_LA.yml  01C_Georgetown_SC.yml  027_Springhill_LA.yml  02A_Southwind_IPGuestHE.yml  02B_MemphisTestLab.yml  02C_Selma_AL.yml  050_MemphisTwr1-TN.yml  060_MemphisT4_TN.yml  070_MemphisTwr3-TN.yml  071_Hammond_IN.yml  09C_Union_SC.yml  0B3_Russellville_AR.yml  0B4_Russellville_AR.yml  0DA_Mansfield_LA.yml  117_Olla_LA.yml  123_Washington_DC.yml  155_Kansas City_MO.yml  158_Fort Wayne_IN.yml  15A_Lexington_KY.yml  1D3_Wilmington_NC.yml  218_Murfreesboro_TN.yml  21C_Arden Hills_MN.yml  21E_Wooster_OH.yml  228_Modesto_CA.yml  (+391 more)
