[project]
name = "useful-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Huaccho",email = "huaccho.carlos0612@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ruff (>=0.11.6,<0.12.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "nautobot (==2.4.2)",
    "dotenv (>=0.9.9,<0.10.0)",
    "nautobot-golden-config (==2.4.0)",
    "pytz (>=2025.2,<2026.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "meraki (==1.53.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
